--- a/index.html
+++ b/index.html
@@ -1219,6 +1219,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 }
             }
 
+            // Continue in Part 3...
                                         // Clear and render completed trades
             completedTradesBody.innerHTML = '';
             completedTradesCards.innerHTML = '';
